--- a/SpecflowTests/packages.config
+++ b/SpecflowTests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net452" />
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net452" />
   <package id="ExtentReports" version="2.41.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net452" />
@@ -7,5 +9,4 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net452" />
   <package id="SpecFlow" version="2.3.2" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
-  <package id="WebDriver.ChromeDriver.win32" version="2.41.0" targetFramework="net452" />
 </packages>
